Uploaded photo and wrote quick bio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Jacob Krucinski</title>
 
-    <meta name="author" content="Wenli Xiao" />
+    <meta name="author" content="Jacob Krucinski" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
@@ -44,12 +44,11 @@
                 <tr style="padding: 0px">
                   <td style="padding: 2.5%; width: 63%; vertical-align: middle">
                     <p style="text-align: center">
-                      <name>Wenli Xiao</name>
+                      <name>Jacob Krucinski</name>
                     </p>
                     <p>
-                      I am a first-year Master (MS, Robotics) student at
-                      <a href="https://www.ri.cmu.edu/">CMU Robotics Intitute</a
-                                            >. I am currently working in <a href="https://lecar-lab.github.io/">LeCAR Lab</a>, co-advised by <a href="http://www.gshi.me/">Prof. Guanya Shi</a> and <a href="https://www.ri.cmu.edu/ri-faculty/john-m-dolan/">Prof. John Dolan</a>. 
+                      I am a 4th year student at the
+                      <a href="https://www.cse.uconn.edu/">University of Connecticut</a>.
                     </p>
                     <p>
                     <!--   Previously, I had the pleasure to work with -->
@@ -68,20 +67,17 @@
                     <!--   at CMU. -->
                     <!-- </p> -->
                     <p style="text-align: center">
-                      <a href="mailto:randyxiao64@gmail.com">Email</a>
+                      <a href="mailto:jacob.krucinski@uconn.edu">Email</a>
                       &nbsp/&nbsp
-                      <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp -->
-                      <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
-                      <a
-                        href="https://scholar.google.com/citations?user=WGbVYzsAAAAJ&hl=en"
-                        >Google Scholar</a
-                      >
+                      <a href="https://www.linkedin.com/in/jkrucinski/">LinkedIn</a>
                       &nbsp/&nbsp
-                      <a href="https://twitter.com/RandyXiao_">Twitter</a>
+                      <a href="https://scholar.google.com/citations?user=nqOWfJ0AAAAJ&hl=en">Google Scholar</a>
                       &nbsp/&nbsp
-                      <a href="https://github.com/WENLIXIAO-CS">Github</a>
+                      <a href="https://github.com/savage-hacker14">GitHub</a>
                       &nbsp/&nbsp
-                     <a href="https://wenli-xiao.notion.site/Photography-7e23724360934eeaaa9c9bbbd37d09e5?pvs=4">Photography</a>
+                      <a href="https://stackoverflow.com/users/14121684/jacob-k">StackOverflow</a>
+                      &nbsp/&nbsp
+                      <a href="https://500px.com/p/jacob1576?view=photos">Photography</a>
                     </p>
                   </td>
                   <td style="padding: 2.5%; width: 40%; max-width: 40%">
@@ -89,7 +85,7 @@
                       ><img
                         style="width: 100%; max-width: 100%"
                         alt="profile photo"
-                        src="images/wenlixiao_circle.png"
+                        src="images/Jacob_Krucinski_v2.png"
                         class="hoverZoomLink"
                     /></a>
                   </td>
@@ -372,9 +368,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <b>UC Berkeley</b>, Berkeley, CA, USA
+              <b>University of Connecticut</b>, Storrs, CT, USA • Sep. 2020 to May 2024
               <br>
-              Visiting Student • Jan. 2022 to May. 2022
+              Bachelor of Science in Engineering, Computer Science and Engineering, Mathematics Minor
               </br>
             </td>
             <td style="padding:0px 20px 0px 20px;width:10%;vertical-align:middle"><img src="images/berkeley-logo.png" width="75" height="75"></td>
@@ -384,9 +380,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <b>The Chinese University of Hong Kong, Shenzhen</b>, China
+              <b>Lund Institute of Technology (LTH)</b>, Lund, Sweden • Jan. 2023 to Jun. 2023
               <br>
-              B.S. in Electric Information Engineering • Sep. 2019 to Jun. 2023
+              Study abroad semester taking courses in computer vision, databases, and process simulation
               </br>
             </td>
             <td style="padding:0px 20px 0px 20px;width:10%;vertical-align:middle"><img src="images/cuhksz-logo.jpeg" width="75" height="75"></td>
