Finished research and work experience section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,14 @@
                     <a href="https://github.com/Aitslab/BioNLP/tree/master/jacob">GitHub</a>
                     <p></p>
                     <p>
-                        This paper jointly tackles policy adaptation and safe reinforcement learning with safety guarantees. Comprehensive experiments on (1) classic control problems (Inverted Pendulum), (2) simulation benchmarks (Safety Gym), and (3) a real-world agile robotics platform (RC Car) demonstrate great superiority of SafeDPA in both safety and task performance, over state-of-the-art baselines.
+                      I explore key models such as <a href="https://github.com/microsoft/BioGPT">BioGPT</a>
+                      and <a href="https://github.com/allenai/scibert">SciBERT</a> for relation extraction in biomedical literature using annotated corpora including 
+                      <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4860626/">BC5CDR</a>, 
+                      <a href="https://biocreative.bioinformatics.udel.edu/news/corpora/chemprot-corpus-biocreative-vi/">ChemProt</a>, 
+                      and <a href="https://biocreative.bioinformatics.udel.edu/tasks/biocreative-vii/track-1/">DrugProt</a>.
+                      Specifically, I used a combined
+                      ChemProt and DrugProt corpus for SciBERT fine-tuning 
+                      and improved precision, recall, and F1 score by 5%.
                     </p>
                   </td>
                 </tr>
@@ -233,12 +240,12 @@
                     <a href="https://ieeexplore.ieee.org/abstract/document/9438357">PDF</a>
                     <p></p>
                     <p>
-                      This paper presents an adaptive client sampling algorithm
-                      that minimizes wall-clock convergence time in Federated
-                      Learning by addressing system and statistical
-                      heterogeneity, resulting in up to 73% less time spent
-                      compared to baselines (weighted sampling, uniform
-                      sampling, .etc).
+                      This paper presents computationally efficient CNN models for detecting and localizing streaking targets from an
+                      optical sensor's Focal Plane Array. When compared to state-of-the-art (SOTA) probabilistic techniques, the machine learning models
+                      were 340 times faster for detection and approximately 360
+                      times faster for localization on full size 256x256 images. For detection, the ROC AUC was 0.94 for the ML
+                      model and 0.85 for the SOTA model. For localization,
+                      the MSE was 0.0351 for the ML model and 0.243 for the SOTA model.
                     </p>
                   </td>
                 </tr>
@@ -257,7 +264,8 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <b>University of Connecticut</b>, Storrs, CT, USA • Sep. 2020 to May 2024
+              <b>University of Connecticut</b>, Storrs, CT, USA <br>
+              <i>Sep. 2020 to May 2024</i>
               <br>
               Bachelor of Science in Engineering, Computer Science and Engineering, Mathematics Minor
               </br>
@@ -269,7 +277,8 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <b>Lund Institute of Technology (LTH)</b>, Lund, Sweden • Jan. 2023 to Jun. 2023
+              <b>Lund Institute of Technology (LTH)</b>, Lund, Sweden <br>
+              <i>Jan. to Jun. 2023</i>
               <br>
               Study abroad semester taking courses in computer vision, databases, and process simulation
               </br>
@@ -280,7 +289,7 @@
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Experiences</heading>
+              <heading>Work Experience</heading>
             </td>
           </tr>
           <tr>
@@ -289,42 +298,57 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <a href="https://riss.ri.cmu.edu/meet-the-2022-ri-summer-scholars/"> Robotics Institute Summer Scholar (RISS)</a>, <b>Carnegie Mellon University</b>
+              <a href="https://se.mathworks.com/company/jobs/students/edg.html"> Engineering Development Group Intern</a>, <b>The MathWorks Inc.</b>, Natick, MA
               <br>
-              Research Intern • June. 2022 to Aug. 2023
+              <i>Jun. to Aug. 2023</i>
               <br>
-              Advisor: <a href=""> Prof. John Dolan</a> and <a href="">Yiwei Lyu</a>
+              Designed and implemented a REST API feature with asynchronous support to facilitate integration with MATLAB and other language environments.
               </br>
             </td>
-            <td style="padding:0px 20px 0px 20px;width:10%;vertical-align:middle"><img src="images/riss-logo.jpeg" width="75" height="75"></td>
+            <td style="padding:0px 20px 0px 0px;width:10%;vertical-align:middle"><img src="images/matlab_logo.jpg" width="75" height="75"></td>
           </tr>
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <a href="https://rise.cs.berkeley.edu/"> RISE Lab</a>, <b>UC Berkeley</b>
+              <a href="https://catalog.uconn.edu/directory-of-courses/course/CSE/2301/">Undergraduate Teaching Assistant</a>, 
+              <b>University of Connecticut</b>, Storrs, CT
               <br>
-              Research Intern • March. 2022 to May. 2022
+              <i>Aug. to Dec. 2022</i>
               <br>
-              Advisor: <a href="https://people.eecs.berkeley.edu/~jegonzal/">Prof. Joseph E. Gonzalez</a>
- and <a href="https://tianjunz.github.io/">Tianjun Zhang</a></br>
+              Assistant for <a href="https://catalog.uconn.edu/directory-of-courses/course/CSE/2301/">CSE 2301</a> - Digital Logic Design. This course covered the fundamentals of Boolean Algebra and Transistor-Transistor Logic where students applied their skills in weekly labs. I assisted with labs, grading exams/reports, and hosted office hours.
             </td>
-            <td style="padding:0px 24px 0px 20px;width:10%;vertical-align:middle"><img src="images/riselab-logo.jpeg" width="65" height="65"></td>
+            <td style="padding:0px 0px 0px 0px;width:10%;vertical-align:middle"><img src="images/uconn_soe_logo.png" width="75" height="75"></td>
           </tr>
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <a href="https://ncel.cuhk.edu.cn/home"> NCEL Lab</a>, <b>Shenzhen Institute of Artificial Intelligence and Robotics for Society (Shenzhen AIRS)</b>
+              <a href="https://news.medtronic.com/medtronic-summer-internship-program"> AI/ML Summer Engineering Intern</a>, <b>Medtronic, </b>North Haven, CT
               <br>
-              Research Intern • Aug. 2020 to March. 2022 
+              <i>Jun. to Aug. 2022</i>
               <br>
-              Advisor: <a href=""> Prof. Jianwei Huang</a> and <a href="">Prof. Bing Luo</a> 
+              Deployed an SVM model on the <a href="https://www.medtronic.com/covidien/en-us/products/surgical-stapling/signia-stapling-system.html">Signia surgical stapler</a> for staple quality assessment based on sensor measurements. Also, I trained a CNN model for visual staple quality 
+              assessment.
               </br>
             </td>
-            <td style="padding:0px 20px 0px 20px;width:10%;vertical-align:middle"><img src="images/airs-logo.jpeg" width="75" height="75"></td>
+            <td style="padding:0px 0px 0px 60px;width:20%;vertical-align:middle"><img src="images/medtronic_logo.jpg" width="100" height="100"></td>
+          </tr>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
+              <a href="https://ncel.cuhk.edu.cn/home"> AI/ML Engineering Intern</a>, <b>Lockheed Martin, </b>Shelton, CT
+              <br>
+              <i>May to Jul. 2021</i>
+              <br>
+              Part of (Neural) Network Training and Deployment IRAD team developing an ML-based object detection
+              model for the <a href="https://lockheedmartin.com/content/dam/lockheed-martin/aero/documents/Stalker/Stalker%20XE%20Litho_product%20card.pdf">Stalker XE</a> drone.
+              </br>
+            </td>
+            <td style="padding:0px 0px 0px 110px;width:30%;vertical-align:middle"><img src="images/lockheed_martin_2_logo.png" width="65" height="65"></td>
           </tr>
 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
