Added dark mode and CV

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                     <p style="text-align: center">
                       <name>Jacob Krucinski</name>
                     </p>
+                    <div style="margin-left: 170px">
+                      <span class="toggle-container">
+                        <label class="switch">
+                            <input type="checkbox" id="darkModeToggle">
+                            <span class="slider"></span>
+                        </label>
+                        <span class="toggle-label">   Dark Mode</span>
+                      </span>
+                    </div>
                     <p>
                       I am a 4th year student at the
                       <a href="https://www.cse.uconn.edu/">University of Connecticut</a>. I am passionate
@@ -74,6 +83,8 @@
                     <p style="text-align: center">
                       <a href="mailto:jacob.krucinski@uconn.edu">Email</a>
                       &nbsp/&nbsp
+                      <a href="https://drive.google.com/file/d/18T6lgwdu_2P4msQ4hTjwXIlTRNuC1q84/view?usp=sharing">Latest CV</a>
+                      &nbsp/&nbsp
                       <a href="https://www.linkedin.com/in/jkrucinski/">LinkedIn</a>
                       &nbsp/&nbsp
                       <a href="https://scholar.google.com/citations?user=nqOWfJ0AAAAJ&hl=en">Google Scholar</a>
@@ -85,6 +96,7 @@
                       <a href="https://500px.com/p/jacob1576?view=photos">Photography</a>
                     </p>
                   </td>
+
                   <td style="padding: 2.5%; width: 40%; max-width: 40%">
                     <a href="images/Jacob_Krucinski_v2.png"
                       ><img
@@ -270,9 +282,10 @@
               Bachelor of Science in Engineering, Computer Science and Engineering, Mathematics Minor
               </br>
             </td>
-            <td style="padding:0px 0px 0px 0px;width:15%;vertical-align:middle"><img src="images/uconn_logo.png" width="85" height="85"></td>
+            <td style="padding:0px 0px 0px 47px;width:15%;vertical-align:middle"><img src="images/uconn_logo.png" width="75" height="75"></td>
           </tr>
         </tbody></table>
+        <br>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
@@ -283,7 +296,7 @@
               Study abroad semester taking courses in computer vision, databases, and process simulation
               </br>
             </td>
-            <td style="padding:0px 0px 0px 0px;width:15%;vertical-align:middle"><img src="images/lund_logo.png" width="85" height="85"></td>
+            <td style="padding:0px 0px 0px 100px;vertical-align:middle"><img src="images/lund_logo_2.png" width="115" height="85"></td>
           </tr>
         </tbody></table>
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
@@ -325,7 +338,7 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
-            <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
+            <td style="padding:0px 20px 20px 25px;width:75%;vertical-align:middle">
               <a href="https://news.medtronic.com/medtronic-summer-internship-program"> AI/ML Summer Engineering Intern</a>, <b>Medtronic, </b>North Haven, CT
               <br>
               <i>Jun. to Aug. 2022</i>
@@ -362,6 +375,8 @@
     </table>
 
     <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=caidDJ8QQobvXC6nWfyLUlqwjx5aF-t6bcZRbTKKANo&cl=ffffff&w=a"></script>
+
+    <script src="darkmode.js"></script>
     
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
