Added image expansion feature for research

--- a/index.html
+++ b/index.html
@@ -64,22 +64,6 @@
                       machine learning engineer and solve complex problems such as autonomous driving
                       and surgical robotics. 
                     </p>
-                    <p>
-                    <!--   Previously, I had the pleasure to work with -->
-                    <!--   <a -->
-                    <!--     href="https://scholar.google.com/citations?user=QQq52JcAAAAJ&hl=en" -->
-                    <!--     >Jianwei Huang</a -->
-                    <!--   >, <a href="https://luobing1008.github.io">Bing Luo</a> at -->
-                    <!--   CUHK Shenzhen, -->
-                    <!--   <a href="https://tianjunz.github.io/">Tianjun Zhang</a> at -->
-                    <!--   UC Berkeley, -->
-                    <!--   <a href="https://www.ri.cmu.edu/ri-faculty/john-m-dolan/" -->
-                    <!--     >John Dolan</a -->
-                    <!--   > -->
-                    <!--   , and -->
-                    <!--   <a href="https://www.cs.cmu.edu/~yiweilyu/">Yiwei Lyu</a> -->
-                    <!--   at CMU. -->
-                    <!-- </p> -->
                     <p style="text-align: center">
                       <a href="mailto:jacob.krucinski@uconn.edu">Email</a>
                       &nbsp/&nbsp
@@ -147,28 +131,18 @@
             >
 
                 <!-- project: Relation Extraction NLP -->
-                <tr onmouseout="safeDPA_stop()" onmouseover="safeDPA_start()">
+                <tr>
                   <td style="padding: 20px; width: 25%; vertical-align: bottom">
-                    <div class="one">
-                      <div class="two" id="NLP_rel_ext">
-                          <!-- <source src="images/SafeDPA.gif" type="video/mp4" /> -->
-                        <img src="images/nlp_relation_extraction.png" width="160" align="bottom" />
-                        </video>
-                      </div>
-                        <img src="images/SafeDPA.gif" width="160" align="bottom" />
+                    <!-- <div class="one">
+                      <img src="images/nlp_relation_extraction.png" width="160" align="bottom" />
+                    </div> -->
+                    <a href="#fullscreen-container-1">
+                      <img src="images/nlp_relation_extraction.png" width="160" id="thumbnail_nlp"/>
+                    </a>
+                    <div id="fullscreen-container-1">
+                      <a href="#" style="position: absolute; top: 10px; right: 10px; color: #fff; font-size: 24px;">Close</a>
+                      <img src="images/nlp_relation_extraction.png" alt="Full Screen Image" id="fullscreen-image-1">
                     </div>
-                    <script type="text/javascript">
-                      function safeDPA_start() {
-                        document.getElementById("NLP_rel_ext").style.opacity =
-                          "1";
-                      }
-
-                      function safeDPA_stop() {
-                        document.getElementById("NLP_rel_ext").style.opacity =
-                          "0";
-                      }
-                      safeDPA_stop();
-                    </script>
                   </td>
                   <td style="padding: 20px; width: 75%; vertical-align: middle">
                     <a href="">
@@ -181,8 +155,8 @@
                     <strong>Jacob Krucinski</strong>
                     <br />
                     <em
-                      >Lund University - EDAN70 Course Project</em
-                    > 
+                      >Lund University - EDAN70 Course Project, Advisor: <a href="https://portal.research.lu.se/en/persons/sonja-aits">Sonja Aits</a>
+                    </em> 
                     <br />
                     <!-- <a href="">project page</a> / -->
                     <a href="https://drive.google.com/file/d/1pJeUU4tiMoLDh67E3tf4AzhAnLDdAwDG/view?usp=sharing">PDF</a> /
@@ -190,7 +164,8 @@
                     <a href="https://github.com/Aitslab/BioNLP/tree/master/jacob">GitHub</a>
                     <p></p>
                     <p>
-                      I explore key models such as <a href="https://github.com/microsoft/BioGPT">BioGPT</a>
+                      As a member of the <a href="https://github.com/Aitslab">Aits Lab</a>, 
+                      I explored key models such as <a href="https://github.com/microsoft/BioGPT">BioGPT</a>
                       and <a href="https://github.com/allenai/scibert">SciBERT</a> for relation extraction in biomedical literature using annotated corpora including 
                       <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4860626/">BC5CDR</a>, 
                       <a href="https://biocreative.bioinformatics.udel.edu/news/corpora/chemprot-corpus-biocreative-vi/">ChemProt</a>, 
@@ -203,34 +178,15 @@
                 </tr>
 
                 <!-- project: ML for Missile Streak Detection and Localization -->
-                <tr
-                  onmouseout="adaptivefl_stop()"
-                  onmouseover="Adaptivefl_start()"
-                >
-                  <td style="padding: 20px; width: 25%; vertical-align: middle">
-                    <div class="one">
-                      <div class="two" id="adaptivefl_image">
-                        <video width="100%" height="100%" muted autoplay loop>
-                          <source src="" type="video/mp4" />
-                          Your browser does not support the video tag.
-                        </video>
-                      </div>
-                      <img src="images/ML_Missile_Detection_Paper.jpg" width="160" />
+                <tr>
+                  <td class="thumbnail_cell" style="padding: 20px; width: 25%; vertical-align: middle">
+                    <a href="#fullscreen-container-2">
+                      <img src="images/ML_Missile_Detection_Paper.jpg" width="160" id="thumbnail_ml_missile_paper"/>
+                    </a>
+                    <div id="fullscreen-container-2">
+                      <a href="" style="position: absolute; top: 10px; right: 10px; color: #fff; font-size: 24px;">Close</a>
+                      <img src="images/ML_Missile_Detection_Paper.jpg" alt="Full Screen Image" id="fullscreen-image-2">
                     </div>
-                    <script type="text/javascript">
-                      function adaptivefl_start() {
-                        document.getElementById(
-                          "adaptivefl_image"
-                        ).style.opacity = "1";
-                      }
-
-                      function adaptivefl_stop() {
-                        document.getElementById(
-                          "adaptivefl_image"
-                        ).style.opacity = "0";
-                      }
-                      adapgivefl_stop();
-                    </script>
                   </td>
                   <td style="padding: 20px; width: 75%; vertical-align: middle">
                     <a href="">
