--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   </head>
 
   <body>
+    <div id="overlay" onclick="closeOverlay()">
+      <span id="closeBtn">&times;</span>
+      <img id="overlayImg" src="" alt="Full Size Image">
+    </div>
+
     <table
       style="
         width: 100%;
@@ -133,16 +138,14 @@
                 <!-- project: Relation Extraction NLP -->
                 <tr>
                   <td style="padding: 20px; width: 25%; vertical-align: bottom">
-                    <!-- <div class="one">
-                      <img src="images/nlp_relation_extraction.png" width="160" align="bottom" />
-                    </div> -->
-                    <a href="#fullscreen-container-1">
+                    <img src="images/nlp_relation_extraction.png" width="160" align="bottom" onclick="openOverlay(this.src)" />
+                    <!-- <a href="#fullscreen-container-1">
                       <img src="images/nlp_relation_extraction.png" width="160" id="thumbnail_nlp"/>
                     </a>
                     <div id="fullscreen-container-1">
                       <a href="#" style="position: absolute; top: 10px; right: 10px; color: #fff; font-size: 24px;">Close</a>
                       <img src="images/nlp_relation_extraction.png" alt="Full Screen Image" id="fullscreen-image-1">
-                    </div>
+                    </div> -->
                   </td>
                   <td style="padding: 20px; width: 75%; vertical-align: middle">
                     <a href="">
@@ -180,13 +183,14 @@
                 <!-- project: ML for Missile Streak Detection and Localization -->
                 <tr>
                   <td class="thumbnail_cell" style="padding: 20px; width: 25%; vertical-align: middle">
-                    <a href="#fullscreen-container-2">
+                    <img src="images/ML_Missile_Detection_Paper.jpg" width="160" align="bottom" onclick="openOverlay(this.src)" />
+                    <!-- <a href="#fullscreen-container-2">
                       <img src="images/ML_Missile_Detection_Paper.jpg" width="160" id="thumbnail_ml_missile_paper"/>
                     </a>
                     <div id="fullscreen-container-2">
                       <a href="" style="position: absolute; top: 10px; right: 10px; color: #fff; font-size: 24px;">Close</a>
                       <img src="images/ML_Missile_Detection_Paper.jpg" alt="Full Screen Image" id="fullscreen-image-2">
-                    </div>
+                    </div> -->
                   </td>
                   <td style="padding: 20px; width: 75%; vertical-align: middle">
                     <a href="">
@@ -331,6 +335,8 @@
     </table>
 
     <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=caidDJ8QQobvXC6nWfyLUlqwjx5aF-t6bcZRbTKKANo&cl=ffffff&w=a"></script>
+
+    <script src="fullscreen_image.js"></script>
 
     <script src="darkmode.js"></script>
     
