Revert back to old version for expansion

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                 <!-- project: Relation Extraction NLP -->
                 <tr>
                   <td style="padding: 20px; width: 25%; vertical-align: bottom">
-                    <img src="images/nlp_relation_extraction.png" width="160" align="bottom" onclick="openOverlay(this.src)" />
-                    <!-- <a href="#fullscreen-container-1">
+                    <!-- <img src="images/nlp_relation_extraction.png" width="160" align="bottom" onclick="openOverlay(this.src)" /> -->
+                    <a href="#fullscreen-container-1">
                       <img src="images/nlp_relation_extraction.png" width="160" id="thumbnail_nlp"/>
                     </a>
                     <div id="fullscreen-container-1">
                       <a href="#" style="position: absolute; top: 10px; right: 10px; color: #fff; font-size: 24px;">Close</a>
                       <img src="images/nlp_relation_extraction.png" alt="Full Screen Image" id="fullscreen-image-1">
-                    </div> -->
+                    </div>
                   </td>
                   <td style="padding: 20px; width: 75%; vertical-align: middle">
                     <a href="">
@@ -183,14 +183,14 @@
                 <!-- project: ML for Missile Streak Detection and Localization -->
                 <tr>
                   <td class="thumbnail_cell" style="padding: 20px; width: 25%; vertical-align: middle">
-                    <img src="images/ML_Missile_Detection_Paper.jpg" width="160" align="bottom" onclick="openOverlay(this.src)" />
-                    <!-- <a href="#fullscreen-container-2">
+                    <!-- <img src="images/ML_Missile_Detection_Paper.jpg" width="160" align="bottom" onclick="openOverlay(this.src)" /> -->
+                    <a href="#fullscreen-container-2">
                       <img src="images/ML_Missile_Detection_Paper.jpg" width="160" id="thumbnail_ml_missile_paper"/>
                     </a>
                     <div id="fullscreen-container-2">
                       <a href="" style="position: absolute; top: 10px; right: 10px; color: #fff; font-size: 24px;">Close</a>
                       <img src="images/ML_Missile_Detection_Paper.jpg" alt="Full Screen Image" id="fullscreen-image-2">
-                    </div> -->
+                    </div>
                   </td>
                   <td style="padding: 20px; width: 75%; vertical-align: middle">
                     <a href="">
