--- a/index.html
+++ b/index.html
@@ -309,11 +309,12 @@
             </td>
             <td style="padding:0px 0px 0px 60px;width:20%;vertical-align:middle"><img src="images/medtronic_logo.jpg" width="100" height="100"></td>
           </tr>
+        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <a href="https://ncel.cuhk.edu.cn/home"> AI/ML Engineering Intern</a>, <b>Lockheed Martin, </b>Shelton, CT
+              <a href="https://www.lockheedmartin.com/en-us/careers/career-areas/ai.html">AI/ML Engineering Intern</a>, <b>Lockheed Martin, </b>Shelton, CT
               <br>
               <i>May to Jul. 2021</i>
               <br>
@@ -323,15 +324,67 @@
             </td>
             <td style="padding:0px 0px 0px 110px;width:30%;vertical-align:middle"><img src="images/lockheed_martin_2_logo.png" width="65" height="65"></td>
           </tr>
+        </tbody></table>
+      
+      <table>
+        <tbody>
+          <tr>
+            <td
+              style="padding: 20px; width: 100%; vertical-align: middle"
+            >
+              <heading>Projects</heading>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table
+        style="
+          width: 100%;
+          border: 0px;
+          border-spacing: 0px;
+          border-collapse: separate;
+          margin-right: auto;
+          margin-left: auto;
+        "
+      >
 
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
-            <tr>
-              <td style="padding:20px;width:100%;vertical-align:middle">
-                <heading>Projects</heading>
-              </td>
-            </tr>
-            <tr>
-          </tbody></table>
+          <!-- project: UConn Senior Design Project -->
+          <tr>
+            <td style="padding: 20px; width: 25%; vertical-align: bottom">
+              <img src="images/Full_Alpha_Prototype2.JPG" width="160" align="bottom" onclick="openOverlay(this.src)" />
+              <!-- <a href="#fullscreen-container-3">
+                <img src="images/Full_Alpha_Prototype2.JPG" width="160" id="thumbnail_nlp"/>
+              </a>
+              <div id="fullscreen-container-3">
+                <a href="#" style="position: absolute; top: 10px; right: 10px; color: #fff; font-size: 24px;">Close</a>
+                <img src="images/Full_Alpha_Prototype2.JPG" alt="Full Screen Image" id="fullscreen-image-3">
+              </div> -->
+            </td>
+            <td style="padding: 20px; width: 75%; vertical-align: middle">
+              <a href="https://kaltura.uconn.edu/media/t/1_7gdpzm3o">
+                <!-- Change this link to the UConn CSE Team 11 team page -->
+                <papertitle>Developing an Automatic CVT for a Bicycle</papertitle>
+              </a>
+              <br /> <strong>Jacob Krucinski</strong>, Ethan W, Alexander M, Ryan Z, Ajeeth V, Luka L, Shreya K, Kaichen N,
+              Wade F, Adam Y, Adam F
+              <br />
+              <em>
+                University of Connecticut - Senior Design Project, Advisor: <a href="https://www.linkedin.com/in/swapna-gokhale-46a629124/">Swapna Gokhale</a>
+              </em> 
+              <br />
+              <!-- <a href="">project page</a> / -->
+              <a href="https://drive.google.com/file/d/1Imr0a8tUqPDUt_-gyOLgeUQuG3cxsual/view?usp=sharing">Poster</a> /
+              <a href="https://kaltura.uconn.edu/media/t/1_7gdpzm3o">Video</a>
+              <p>
+                The goal of the project is to provide beginner bicyclists with an easy learning experience when first using a CVT equipped bike, 
+                and to ensure a more efficient ride for advanced cyclists.     
+                In collaboration with <a href="https://transcendbicycle.com/">Transcend Bicycle</a>, UConn CSE Team 11, and ME Team 50, 
+                I developed the hardware and software infrastructure for the CVT controller that would perform gear shifts automatically.
+                This involved the use of Simulink to model the Human-Bike-CVT system and test the controller in various real-world scenarios, 
+                as well as the Embedded Coder Toolbox to automatically generate C code that was deployed on our microcontroller.
+              </p>
+            </td>
+          </tr>
     </table>
 
     <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=caidDJ8QQobvXC6nWfyLUlqwjx5aF-t6bcZRbTKKANo&cl=ffffff&w=a"></script>
@@ -348,7 +401,7 @@
                     <br>
                     <br>
                     </p><div style="float:left;">
-                        Updated at Oct. 2023
+                        Updated May 9th, 2024
                     </div>
                     <div style="float:right;">
                         Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template
