Added Cup Pong Robot project

--- a/index.html
+++ b/index.html
@@ -350,17 +350,10 @@
 
           <!-- project: UConn Senior Design Project -->
           <tr>
-            <td style="padding: 20px; width: 25%; vertical-align: bottom">
-              <img src="images/Full_Alpha_Prototype2.JPG" width="160" align="bottom" onclick="openOverlay(this.src)" />
-              <!-- <a href="#fullscreen-container-3">
-                <img src="images/Full_Alpha_Prototype2.JPG" width="160" id="thumbnail_nlp"/>
-              </a>
-              <div id="fullscreen-container-3">
-                <a href="#" style="position: absolute; top: 10px; right: 10px; color: #fff; font-size: 24px;">Close</a>
-                <img src="images/Full_Alpha_Prototype2.JPG" alt="Full Screen Image" id="fullscreen-image-3">
-              </div> -->
+            <td style="padding: 20px; width: 35%; vertical-align: middle">
+              <img src="images/Full_Alpha_Prototype2.JPG" width="300" align="bottom" onclick="openOverlay(this.src)" />
             </td>
-            <td style="padding: 20px; width: 75%; vertical-align: middle">
+            <td style="padding: 20px; width: 65%; vertical-align: middle">
               <a href="https://kaltura.uconn.edu/media/t/1_7gdpzm3o">
                 <!-- Change this link to the UConn CSE Team 11 team page -->
                 <papertitle>Developing an Automatic CVT for a Bicycle</papertitle>
@@ -385,9 +378,39 @@
               </p>
             </td>
           </tr>
+
+          <!-- project: ECE 3161 Cup Pong Robot -->
+          <tr>
+            <td style="padding: 20px">
+              <video width="270" height="480" autoplay loop muted>
+                <source src="videos/Successful_Shooter_3.MP4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
+            </td>
+            <td style="padding: 20px; width: 65%; vertical-align: top">
+              <a href="https://drive.google.com/file/d/1oCWxxRtDVnTDjOW6t6yOOWu4PWqpO6sK/view?usp=sharing">
+                <papertitle>Cup Pong Robot</papertitle>
+              </a>
+              <br /> <strong>Jacob Krucinski</strong>, Deven V, Matt C, Andres R
+              <br />
+              <em>
+                University of Connecticut - ECE 3161: Intro to Robotics
+              </em> 
+              <br />
+              <a href="https://drive.google.com/file/d/1oCWxxRtDVnTDjOW6t6yOOWu4PWqpO6sK/view?usp=sharing">Presentation</a> /
+              <a href="https://drive.google.com/drive/folders/1KVbd7Kygzsbu1W8f5--19TAXmzcmWOOi?usp=sharing">Demo Videos</a>
+              <p>
+                The goal of this project was to build a fixed-base two DOF articulated manipulator that would play Cup Pong.
+                The manipulator was built with 2x Dynamixel MX64-AR motors and supporting mounting hardware, as well as a 
+                Lego NXT motor for turret actuation. The microcontroller used was a Raspberry Pi 4. The camera used was 
+                a Raspberry Pi Camera Module v2.1. For cup detection, 100mm 6x6 ArUco tags were used and distance was 
+                calculated via the calibrated camera using OpenCV. 
+              </p>
+            </td>
+          </tr>
     </table>
 
-    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=caidDJ8QQobvXC6nWfyLUlqwjx5aF-t6bcZRbTKKANo&cl=ffffff&w=a"></script>
+    <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=caidDJ8QQobvXC6nWfyLUlqwjx5aF-t6bcZRbTKKANo&cl=ffffff&w=a"></script> -->
 
     <script src="fullscreen_image.js"></script>
 
